--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,69 @@
 * {
-    padding: ;
-    margin: ;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background:rgb(36, 36, 36);
+    background: rgb(48, 48, 48);
+    height: 2000px;
 }
 
-#block, 
-.block {
-    background: rebeccapurple;
+header, footer {
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    background: rgb(20, 20, 20);
     color: white;
-    width: 100px;
-    height: 200px;
-    border: 4px dashed black;
-    border-left: 0;
-    border-right: 10px solid rgb(100, 0, 146);
-    border-radius: 15px 40px 50px 25px;
-    border-bottom-right-radius: 90;
-    opacity: 0.9;
-    /*margin: 20px 50px 100px 150px;*/
-    margin-left: 5px;
+    line-height: 70px;
+}
 
-    padding: 10px 20px;
+header {
+    border-bottom: 4px solid black;
+    margin-bottom: 50px;
+    float: left;
+}
 
-    display: table;
+main {
+    width: 40%;
+    margin: 10%;
+    background: rgb(197, 197, 197);
+    padding: 20px 2.5%;
+    float: left;
+}
+
+aside {
+    width: 20%;
+    padding: 20px 2.5%;  
+    background: rgb(197, 197, 197);  
+    /*border:  1px solid silver;*/
+    float: left;
+    margin-left: 10%;
+
+    position: relative;
+    /*top: 75px;*/
+}
+
+#add-to-cart {
+    background: red;
+    color: white;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 50%;
+    position: fixed;
+    top: 100px;
+    left: 70px;
+    cursor: pointer;
+}
+
+#add-to-cart:hover {
+    background: rgb(129, 1, 1);
+}
+
+
+footer {
+    border-top: 4px solid black;
+    margin-top: 50px;
+    float: left;
 }
