--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,36 @@ header {
     border-bottom: 4px solid black;
     margin-bottom: 50px;
     float: left;
+    z-index: 2;
+    position: relative;
+}
+
+.nav {
+    list-style: none;
+    display: block;
+    width: 50%;
+    margin-left: 25%;
+    float: left;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.nav li {
+    display: inline;
+    background: white;
+    border: 1px solid silver;
+    padding: 0 20px;
+}
+
+.nav li:not(:last-of-type) {
+    margin-right: 20px;
+}
+
+.nav li:hover {
+    background: rgb(68, 68, 68);
+    color: white;
+    border-radius: 50px;
+    cursor: pointer;
 }
 
 main {
@@ -41,6 +71,7 @@ aside {
 
     position: relative;
     /*top: 75px;*/
+    z-index: 1;
 }
 
 #add-to-cart {
