--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body {
     background: rgb(48, 48, 48);
 }
 
-li {
-    color: white;
-    cursor: pointer;
+.header {
+    display: flex;
+    height: 70px;
+    align-items: center;
+    background-color: black;
+    border-bottom: 2px solid rgb(24, 24, 24);
 }
 
-li:hover {
+.parent {
+    display: flex;
+    /*flex-direction: column;*/
+    align-items: center;
+}
+
+.logo-img {
+    height: 50px;
+    color: white;
+}
+
+.logo-link {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.sik, .sup {
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    width: 100px;
+    padding: 10px;
+    margin: 0;
+    text-align: center;
+    font-family: 'Bebas Neue';
+}
+
+
+.sup:hover {
+    color: rgb(104, 104, 104);
+}
+
+.sik:hover {
     color: rgb(104, 104, 104);
 }
