--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap');
+
 
 body {
-    background: rgb(48, 48, 48);
+    padding: 50px 100px;
+    background: rgb(53, 53, 53);
+    font-family: 'Protest Riot';
+    font-size: 20px;
+    font-weight: bold;
 }
+
+.item {
+    border: 1px solid black;
+    background: #555555;
+    color: #eeeeee;
+    padding: 15px;
+}
+
+.box {
+    display: grid;
+    grid-auto-columns: 200px;
+    grid-template: 100px 200px 150px / 400px 400px 400px;
+    row-gap: 0px;
+    gap: 10px;
+    grid-auto-flow: dense;
+}
+
+.item:first-of-type {
+    grid-column: 1/3;
+    grid-row: 1/span 2;
+}
+
+.item:nth-of-type(2) {
+    grid-column: span 2;
+}
+
+.item:nth-of-type(7) {
+    grid-column: span 2/4;
+}
+
+
+/*.wrapper {
+    display: grid;
+    grid-template-rows: repeat(3, 100px);
+    grid-template-areas: 
+    "header header header"
+    "main main aside"
+    "footer footer footer";
+}
+
+.element {
+    border: 1px solid black;
+}
+
 
 .header {
-    display: flex;
-    height: 70px;
-    align-items: center;
-    background-color: black;
-    border-bottom: 2px solid rgb(24, 24, 24);
-}
-
-.parent {
-    display: flex;
-    /*flex-direction: column;*/
-    align-items: center;
-}
-
-.logo-img {
-    height: 50px;
-    color: white;
-}
-
-.logo-link {
-    display: flex;
-    height: 100%;
-    align-items: center;
-}
-
-.sik, .sup {
-    color: white;
-    cursor: pointer;
-    text-decoration: none;
-    width: 100px;
-    padding: 10px;
-    margin: 0;
-    text-align: center;
-    font-family: 'Bebas Neue';
+    grid-area: header;
 }
 
 
-.sup:hover {
-    color: rgb(104, 104, 104);
+.main {
+    grid-area: main;
 }
 
-.sik:hover {
-    color: rgb(104, 104, 104);
+.aside {
+    grid-area: aside;
 }
+
+.footer {
+    grid-area: footer;
+}*/
