--- a/css/style.css
+++ b/css/style.css
@@ -1,179 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 body {
-    display: flex;
-    flex-direction: column;
-
-
-    background: rgba(255, 196, 3, 1);
-    min-width: 100vw;
-    min-height: 100vh;
+    background: rgba(255, 255, 255, 1);
     margin: 0;
-    font-family: 'Roboto';
-}
-
-.main, .header, .block_5, .footer {
-    display: flex;
-    gap: 24px;
-
-}
-
-.main {
-    flex-direction: column;
+    width: 100%;
     height: 100%;
-
-    flex: 1 1;
 }
 
 .header {
-    justify-content: flex-end;
-    min-height: 4vh;
-    background: rgba(95, 0, 255, 1);
-    border: 10px solid red;
-    margin: 0;
-}
-
-.block {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    justify-content: center;
+
+    gap: 120px;
+
+    font-size: 30px;
 }
 
-.invis {
-    display: flex;
-    align-items: center; 
-    margin-left: 20vh;
-    border-right: 10px solid red;
+.moduli, .recenzi, .vidguk, .information {
+    margin-top: 20px;
 }
 
-.block_1 {
-    background: rgba(158, 172, 0, 1);
-    width: 72px;
-    height: 14px;
-    margin-right: 19px;
+
+.moduli:hover {
+    cursor: pointer;
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 10px;
 }
 
-.block_2 {
-    background: rgba(158, 172, 0, 1);
-    width: 72px;
-    height: 14px;
-    margin-right: 19px;
+.recenzi:hover {
+    cursor: pointer;
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 10px;
 }
 
-.block_3 {
-    background: rgba(158, 172, 0, 1);
-    width: 72px;
-    height: 14px;
-    margin-right: 19px;
+.vidguk:hover {
+    cursor: pointer;
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 10px;
 }
 
-.block_4 {
-    background: rgba(158, 172, 0, 1);
-    width: 72px;
-    height: 14px;
-    margin-right: 19px;
+.information:hover {
+    cursor: pointer;
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 10px;
 }
 
-.block_5 {
-    display: flex;
-    /* align-items: stretch; */
-    justify-content: stretch;
-    justify-items: stretch;
-    flex: 1 1;
-
-    padding: 48px;
-
-    background: green;
-
-    :where(.one .block_info) {
-        display: flex;
-        align-items: center;
-
-        padding: 68px;
-
-        flex: 1 1;
-    }
-    
-}
-
-.one {
-    background: linear-gradient(117.04deg, #6E176B 20.61%, #2357A4 79.3%);
-    
-    display: flex;
-    text-align: center;
-
-    border-radius: 30px;
-    margin-left: 20px;
-    
-}
-
-.text_1 {
-    display: flex;
-    text-align: center;
-    font-size: 35px;
-    color: white;
-    padding: 5px;
-    align-items: center
-}
-
-.block_info {
-    background: rgba(220, 38, 38, 1);
-    
-    margin: 10px 20px;
-
-    margin-left: auto;
-}
-
-h1 {
-    font-size: 40px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-h2 {
-    margin-left: 40px;
-    color: rgb(255, 255, 255); 
-}
-
-li {
-    color: white;
-    font-size: 23px;
-    padding-bottom: 20px;
-}
-
-.footer {
-    background: rgba(124, 39, 39, 1);
-    height: 149px;
+.line_1 {
+    margin-top: 30px;
+    border-bottom: 3px solid rgba(217, 217, 217, 1);
 }
 
 .main_2 {
     display: flex;
+
+    min-height: 100%;
+
+    gap: 30px;
+
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-    color: white;
-    gap: 60px;
-    margin-top: 60px;
-    margin-left: 60px;
-    font-size: 20px;
 }
 
-.sponsmat {
-    margin-left: 380px;
+.block_1 {
+    background: rgba(215, 255, 248, 1);
 }
 
-.block_znak {
+.block_2 {
+    background: rgba(0, 169, 192, 1);
+}
+
+.block_3 {
+    background: rgba(245, 250, 0, 1);
+}
+
+.main_3 {
     display: flex;
-    background: rgb(255, 255, 255);
-    width: 70px;
-    height: 70px;
-    border-radius: 50px;
-}
-
-.znak {
-    color: rgba(124, 39, 39, 1);
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-    margin: auto;
+    justify-content: center;
+    background: rgba(0, 168, 191, 1);
 }
