--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
     height: 100%;
 }
 
+.header,
+.main_3 {
+    min-height: 100px;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -12,68 +17,87 @@ body {
 
     gap: 120px;
 
-    font-size: 30px;
-}
-
-.moduli, .recenzi, .vidguk, .information {
-    margin-top: 20px;
-}
-
-
-.moduli:hover {
-    cursor: pointer;
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 10px;
-}
-
-.recenzi:hover {
-    cursor: pointer;
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 10px;
-}
-
-.vidguk:hover {
-    cursor: pointer;
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 10px;
-}
-
-.information:hover {
-    cursor: pointer;
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 10px;
-}
-
-.line_1 {
-    margin-top: 30px;
     border-bottom: 3px solid rgba(217, 217, 217, 1);
+}
+
+.header_button {
+    appearance: none;
+
+    font-size: 30px;
+
+    background: none;
+    border: none;
+
+    &:hover {
+    cursor: pointer;
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 10px;
+    }
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .main_2 {
     display: flex;
 
-    min-height: 100%;
+    justify-content: stretch;
+    align-items: stretch;
 
     gap: 30px;
 
-    justify-content: center;
+    min-height: calc(100vh - (30px * 2 + (100px *2)) );
+}
+
+.card {
+    display: flex;
+    flex-flow: column;
+
+   padding: 24px;
+
+   width: 100%;
+
+   border-radius: 30px;
+}
+
+.card-1 {
+    display: flex;
+    /* justify-content: start; */
     align-items: center;
-}
-
-.block_1 {
+    
     background: rgba(215, 255, 248, 1);
+
+    font-size: 20px;
+
+    & p {
+        font-size: 30px;
+    }
+
+    & a {
+        font-size: 20px; 
+    }
+
 }
 
-.block_2 {
+.card-2 {
     background: rgba(0, 169, 192, 1);
 }
 
-.block_3 {
+.card-3 {
     background: rgba(245, 250, 0, 1);
 }
 
 .main_3 {
     display: flex;
     justify-content: center;
+    align-items: center;
+
+    font-size: 30px;
+
+    color: rgba(255, 255, 255, 1);
+
     background: rgba(0, 168, 191, 1);
 }
