--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 body {
     background: rgba(255, 255, 255, 1);
     margin: 0;
     width: 100%;
     height: 100%;
+    font-family: 'Inter';
 }
 
 .header,
 .main_3 {
     min-height: 100px;
+
 }
 
 .header {
@@ -39,6 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 30px;
+
 }
 
 .main_2 {
@@ -47,7 +53,12 @@ body {
     justify-content: stretch;
     align-items: stretch;
 
-    gap: 30px;
+
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+
+    gap: 40px;
 
     min-height: calc(100vh - (30px * 2 + (100px *2)) );
 }
@@ -56,11 +67,12 @@ body {
     display: flex;
     flex-flow: column;
 
-   padding: 24px;
+    padding: 24px;
 
-   width: 100%;
+    padding-left: clamp(48px, 5vw, 64px);
+    padding-right: clamp(48px, 5vw, 64px);
 
-   border-radius: 30px;
+    border-radius: 30px;
 }
 
 .card-1 {
@@ -70,24 +82,58 @@ body {
     
     background: rgba(215, 255, 248, 1);
 
-    font-size: 20px;
+    font-size: 15px;
 
     & p {
-        font-size: 30px;
+        margin: auto;
+        font-size: 28px;
     }
 
     & a {
+        margin: auto auto 0px 10px;
         font-size: 20px; 
     }
 
 }
 
 .card-2 {
+    display: flex;
+    align-items: center;
+
     background: rgba(0, 169, 192, 1);
+
+    font-size: 15px;
+
+    & p {
+        margin: auto;
+        font-size: 28px;
+    }
+
+    & a {
+        margin: auto auto 10px 20px;
+        font-size: 20px; 
+    }
+
 }
 
+
 .card-3 {
+    display: flex;
+    align-items: center;
+
     background: rgba(245, 250, 0, 1);
+
+    font-size: 15px;   
+
+    & p {
+        margin: auto;
+        font-size: 28px;
+    }
+
+    & a {
+        margin: auto auto 10px 20px;
+        font-size: 20px; 
+    }
 }
 
 .main_3 {
