--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
 body {
-    background: rgba(255, 255, 255, 1);
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    font-family: 'Inter';
-}
-
-.header,
-.main_3 {
-    min-height: 100px;
-
-}
-
-.header {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 
-    gap: 120px;
+    min-width: 100vw;
+    min-height: 100vh;
 
-    border-bottom: 3px solid rgba(217, 217, 217, 1);
+    /* overflow: hidden; */
+
+    padding: 0;
+    margin: 0;
+
+    font-family: 'Inter';
+    background: rgba(217, 217, 217, 1);
 }
 
-.header_button {
-    appearance: none;
-
-    font-size: 30px;
-
-    background: none;
-    border: none;
-
-    &:hover {
-    cursor: pointer;
-    background-color: rgba(217, 217, 217, 1);
-    border-radius: 10px;
-    }
-}
-
-.main {
+.card-bloks {
     display: flex;
-    flex-direction: column;
-    gap: 30px;
+    justify-content: center;
+    align-items: center;
 
-}
-
-.main_2 {
-    display: flex;
-
-    justify-content: stretch;
-    align-items: stretch;
-
-
-    width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
-
-    gap: 40px;
-
-    min-height: calc(100vh - (30px * 2 + (100px *2)) );
+    /* padding: 4vw; */
 }
 
 .card {
     display: flex;
-    flex-flow: column;
+    /* align-items: center;
+    justify-content: center; */
 
-    padding: 24px;
 
-    padding-left: clamp(48px, 5vw, 64px);
-    padding-right: clamp(48px, 5vw, 64px);
+    width: 370px;
+    aspect-ratio: 1/1.3;
+
+    z-index: 2;
+
+    font-size: 40px;
 
     border-radius: 30px;
+    background: rgba(0, 169, 192, 1);
+
+}
+
+.text-2 {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+
+    margin: 0;
+
+    font-size: clamp(28px, 3vw, 38px);
+    /* padding-bottom: 10%; */
+
+    transform: rotate(90deg);
+
+    color: rgba(255, 255, 255, 1);
 }
 
 .card-1 {
-    display: flex;
-    /* justify-content: start; */
-    align-items: center;
-    
+    /* margin: 0 auto auto  calc((350px / 3) * -1);  */
+
     background: rgba(215, 255, 248, 1);
 
-    font-size: 15px;
+    /* transform: translate(-60%, -60%); */
 
-    & p {
-        margin: auto;
-        font-size: 28px;
-    }
+    margin-bottom: 30%;
+    transform: translate(30%);
 
-    & a {
-        margin: auto auto 0px 10px;
-        font-size: 20px; 
+    p {
+        justify-content: start;
+
+        align-items: center;
+
+        font-weight: bold;
+
+        font-size: clamp(20px, 2.5vw, 30px);
+        margin: 25px;
     }
 
 }
 
 .card-2 {
-    display: flex;
-    align-items: center;
-
-    background: rgba(0, 169, 192, 1);
-
-    font-size: 15px;
-
-    & p {
-        margin: auto;
-        font-size: 28px;
-    }
-
-    & a {
-        margin: auto auto 10px 20px;
-        font-size: 20px; 
-    }
-
-}
-
-
-.card-3 {
-    display: flex;
-    align-items: center;
+    /* margin: auto calc(350px / 3) 0;  */
 
     background: rgba(245, 250, 0, 1);
 
-    font-size: 15px;   
+    margin-top: 30%;
+    transform: translate(-30%);
 
-    & p {
-        margin: auto;
-        font-size: 28px;
+    p {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+
+        padding: 60px;
+
+        font-weight: bold;
+
+        transform: rotate(60deg);
+
+        font-size: clamp(17px, 3vw, 27px);
     }
 
-    & a {
-        margin: auto auto 10px 20px;
-        font-size: 20px; 
-    }
+    /* transform: translate(60%, 60%); */
 }
 
-.main_3 {
+.card-bloks-1 {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    font-size: 30px;
-
-    color: rgba(255, 255, 255, 1);
-
-    background: rgba(0, 168, 191, 1);
+    
+    height: 100vh;
 }
