--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
     justify-content: center;
     align-items: center;
 
+    flex-wrap: wrap;
+
     min-width: 100vw;
     min-height: 100vh;
 
@@ -17,10 +19,15 @@ body {
     background: rgba(217, 217, 217, 1);
 }
 
+.main {
+    position: relative;
+}
+
 .card-bloks {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 3%;
 
     /* padding: 4vw; */
 }
@@ -106,10 +113,174 @@ body {
     /* transform: translate(60%, 60%); */
 }
 
+/* --------- */
+
 .card-bloks-1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
+    position: relative;
+
     height: 100vh;
+}
+
+.card-3 {
+    position: relative;
+    bottom: 170px;
+    left: 100px;
+
+    background: rgba(215, 255, 248, 1);
+
+    position: absolute;
+    top: 0%;
+    left: 10%;
+
+
+
+    p {
+        justify-content: start;
+
+        align-items: center;
+
+        font-weight: bold;
+
+        font-size: clamp(20px, 2.5vw, 30px);
+        margin: 25px;
+    }
+
+}
+
+.card-4 {
+    width: 370px;
+    aspect-ratio: 1/1.3;
+
+    z-index: 2;
+
+    font-size: 40px;
+
+    position: absolute;
+    top: 23%;
+    left: 32%;
+
+    border-radius: 30px;
+    background: rgba(0, 169, 192, 1);
+
+}
+
+.text-4 {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+
+    margin-top: 220px;
+
+    font-size: clamp(28px, 3vw, 38px);
+    padding-top: 2%;
+
+    transform: rotate(90deg);
+
+    color: rgba(255, 255, 255, 1);
+}
+
+.card-5 {
+    background: rgba(245, 250, 0, 1);
+
+    position: absolute;
+    top: 45%;
+    left: 55%;
+
+
+    p {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+
+        padding: 60px;
+
+        font-weight: bold;
+    }
+}
+
+/* ----------------- */
+
+.block-1 {
+    margin-top: 20%;
+    width: 370px;
+    aspect-ratio: 1/1.3;
+
+    font-size: 40px;
+
+    z-index: 3;
+
+    position: relative;
+    top: 23%;
+    left: 32%;
+
+    border-radius: 30px;
+    background: rgba(0, 169, 192, 1);
+}
+
+.block-text {
+    display: flex;
+    justify-content: center;
+
+    padding: 40%;
+
+    text-align: center;
+
+    color: white;
+}
+
+.block-1::before {
+    content: 'Build a Portfolio Website with HTML, CSS, and JavaScript';
+
+
+    width: 370px;
+    aspect-ratio: 1/1.3;
+
+    z-index: 0;
+    inset: 0;
+
+    font-size: 40px;
+
+    position: absolute;
+    translate: -50% -50%;
+
+
+    border-radius: 30px;
+    background: rgba(215, 255, 248, 1);
+
+}
+
+.block::after {
+    content: 'Вступ до веб-розробки за допомогою HTML, CSS, JavaScript';
+
+    width: 370px;
+    aspect-ratio: 1/1.3;
+
+    font-size: 40px;
+
+    z-index: 3;
+
+    position: absolute;
+    translate: 150% -50%;
+
+
+    border-radius: 30px;
+    background: rgba(245, 250, 0, 1);
+
+}
+
+.block-1::before,
+.block::after {
+
+    display: flex;
+    justify-content: start;
+
+    text-align: center;
+    align-items: center;
+    font-weight: bold;
+
+    font-size: clamp(20px, 2.5vw, 30px);
 }
