--- a/css/style.css
+++ b/css/style.css
@@ -1,286 +1,192 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    flex-wrap: wrap;
-
-    min-width: 100vw;
-    min-height: 100vh;
-
-    /* overflow: hidden; */
-
-    padding: 0;
-    margin: 0;
-
-    font-family: 'Inter';
-    background: rgba(217, 217, 217, 1);
-}
-
-.main {
-    position: relative;
-}
-
-.card-bloks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3%;
-
-    /* padding: 4vw; */
-}
-
-.card {
-    display: flex;
-    /* align-items: center;
-    justify-content: center; */
-
-
-    width: 370px;
-    aspect-ratio: 1/1.3;
-
-    z-index: 2;
-
-    font-size: 40px;
-
-    border-radius: 30px;
-    background: rgba(0, 169, 192, 1);
-
-}
-
-.text-2 {
-    display: flex;
-    align-items: center;
-    justify-content: start;
+    background-color: #1d303f, #131228;
 
     margin: 0;
 
-    font-size: clamp(28px, 3vw, 38px);
-    /* padding-bottom: 10%; */
-
-    transform: rotate(90deg);
-
-    color: rgba(255, 255, 255, 1);
-}
-
-.card-1 {
-    /* margin: 0 auto auto  calc((350px / 3) * -1);  */
-
-    background: rgba(215, 255, 248, 1);
-
-    /* transform: translate(-60%, -60%); */
-
-    margin-bottom: 30%;
-    transform: translate(30%);
-
-    p {
-        justify-content: start;
-
-        align-items: center;
-
-        font-weight: bold;
-
-        font-size: clamp(20px, 2.5vw, 30px);
-        margin: 25px;
-    }
-
-}
-
-.card-2 {
-    /* margin: auto calc(350px / 3) 0;  */
-
-    background: rgba(245, 250, 0, 1);
-
-    margin-top: 30%;
-    transform: translate(-30%);
-
-    p {
-        display: flex;
-        justify-items: center;
-        align-items: center;
-
-        padding: 60px;
-
-        font-weight: bold;
-
-        transform: rotate(60deg);
-
-        font-size: clamp(17px, 3vw, 27px);
-    }
-
-    /* transform: translate(60%, 60%); */
-}
-
-/* --------- */
-
-.card-bloks-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: relative;
-
+    width: 100vw;
     height: 100vh;
+
+    background: linear-gradient(#203644, #131429) fixed;
+    font-family: 'Quicksand';
 }
 
-.card-3 {
-    position: relative;
-    bottom: 170px;
-    left: 100px;
+.grid {
+    display: grid;
+    font-size: 25px;
 
-    background: rgba(215, 255, 248, 1);
-
-    position: absolute;
-    top: 0%;
-    left: 10%;
-
-
-
-    p {
-        justify-content: start;
-
-        align-items: center;
-
-        font-weight: bold;
-
-        font-size: clamp(20px, 2.5vw, 30px);
-        margin: 25px;
-    }
-
+    border-bottom: 3px solid rgba(136, 136, 136, 0.548);
 }
 
-.card-4 {
-    width: 370px;
-    aspect-ratio: 1/1.3;
-
-    z-index: 2;
-
-    font-size: 40px;
-
-    position: absolute;
-    top: 23%;
-    left: 32%;
-
-    border-radius: 30px;
-    background: rgba(0, 169, 192, 1);
-
+.grid-1 {
+    display: grid;
+    font-size: 25px;
 }
 
-.text-4 {
+.item {
+    display: grid;
+    grid-template-columns: .3fr 1fr;
+    padding: 16px 24px;
+}
+
+.item-capt {
+    margin-top: 15px;
+    font-size: 35px;
+    color: rgb(165, 165, 165);
+}
+
+.item-content {
     display: flex;
+    justify-content: end;
     align-items: center;
-    justify-content: start;
 
-    margin-top: 220px;
-
-    font-size: clamp(28px, 3vw, 38px);
-    padding-top: 2%;
-
-    transform: rotate(90deg);
-
-    color: rgba(255, 255, 255, 1);
+    gap: 30px;
 }
 
-.card-5 {
-    background: rgba(245, 250, 0, 1);
-
-    position: absolute;
-    top: 45%;
-    left: 55%;
-
-
-    p {
-        display: flex;
-        justify-items: center;
-        align-items: center;
-
-        padding: 60px;
-
-        font-weight: bold;
-    }
-}
-
-/* ----------------- */
-
-.block-1 {
-    margin-top: 20%;
-    width: 370px;
-    aspect-ratio: 1/1.3;
-
-    font-size: 40px;
-
-    z-index: 3;
-
-    position: relative;
-    top: 23%;
-    left: 32%;
-
-    border-radius: 30px;
-    background: rgba(0, 169, 192, 1);
-}
-
-.block-text {
-    display: flex;
+.item-element {
+    display: inline-flex;
+    align-items: center;
     justify-content: center;
 
-    padding: 40%;
-
-    text-align: center;
-
-    color: white;
-}
-
-.block-1::before {
-    content: 'Build a Portfolio Website with HTML, CSS, and JavaScript';
-
-
-    width: 370px;
-    aspect-ratio: 1/1.3;
-
-    z-index: 0;
-    inset: 0;
-
-    font-size: 40px;
-
-    position: absolute;
-    translate: -50% -50%;
-
-
-    border-radius: 30px;
-    background: rgba(215, 255, 248, 1);
-
-}
-
-.block::after {
-    content: 'Вступ до веб-розробки за допомогою HTML, CSS, JavaScript';
-
-    width: 370px;
-    aspect-ratio: 1/1.3;
-
-    font-size: 40px;
-
-    z-index: 3;
-
-    position: absolute;
-    translate: 150% -50%;
-
-
-    border-radius: 30px;
-    background: rgba(245, 250, 0, 1);
-
-}
-
-.block-1::before,
-.block::after {
-
-    display: flex;
-    justify-content: start;
-
-    text-align: center;
-    align-items: center;
     font-weight: bold;
 
-    font-size: clamp(20px, 2.5vw, 30px);
+    width: 50px;
+    aspect-ratio: 1/1;
+
+    color: white;
+    font-size: 30px;
+
+    border-radius: 10px;
+    background: #3d4a52;
+}
+
+.item-element:first-child {
+    background-color: #4180df;
+}
+
+.item-content {
+    &.--2 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:last-child {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--3 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(2) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--4 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-last-child(2) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--5 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(odd) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--6 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(even) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--7 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(n+4) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--8 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(3n-1) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--9 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(3n+1) {
+                background-color: #4180df;
+            }
+        }
+    }
+}
+
+.item-content {
+    &.--10 {
+        .item-element {
+            &:first-child {
+                background-color: #3d4a52;
+            }
+
+            &:nth-child(4n) {
+                background-color: #4180df;
+            }
+        }
+    }
 }
