Update files pug

--- a/_terms.store.pug
+++ b/_terms.store.pug
@@ -1,83 +1,84 @@
 -
-    var LEGALS_LIST = [
+  var
+      DATA_TERMS = [
         {
           caption: 'Definitions',
-          link: '',
-          content: '<p><strong>"Account"</strong> means the account in the name of the Customer which is designated for the debiting and/or crediting of card transaction.</p> <p><strong>“Application"</strong> refers to the application for an account by the Customer and includes the application forms which have been approved.</p> <p><strong>"ATM"</strong> means Automated Teller Machine.</p> <p><strong>"Authentication measures"</strong> means the techniques, methods and processes used to verify the identity of the customer and the debit card transaction.</p> <p><strong>"Bank"</strong> means Access Bank South Africa Limited.</p> <p><strong>"Card"</strong> means a Debit Card issued by the Bank.</p> <p><strong>"Customer"</strong> means an individual or business to whom cards have been issued.</p> <p><strong>"Card transaction"</strong> means one or all of the following transactions by means of the Card:</p>'
+          link: 'legal_definitions',
+          content: '<p><strong>"Account"</strong> means the account in the name of the Customer which is designated for the debiting and/or crediting of card transaction.</p> <p><strong>“Application"</strong>strong> refers to the application for an account by the Customer and includes the application forms which have been approved.</p> <p><strong>"ATM"</strong> means Automated Teller Machine.</p> <p><strong>"Authentication measures"</strong> means the techniques, methods and processes used to verify the identity of the customer and the debit card transaction.</p> <p><strong>"Bank"</strong> means Access Bank South Africa Limited. </p> <p><strong>"Card"</strong> means a Debit Card issued by the Bank.</p> <p><strong>"Customer"</strong> means an individual or business to whom cards have been issued.</p> <p><strong>"Card transaction"</strong> means one or all of the following transactions by means of the Card: </p> <ul> <li>Withdrawal of cash at an ATM or POS; </li> <li>Purchase of goods and/or services at POS;</li> <li>Obtaining an account balance at an ATM;</li> <li>Paying for goods and services purchased over the Internet from an Online merchant using the online payment service.</li> </ul> <p><strong>"Limits"</strong> refers to both ATM, POS daily card transaction limits which are set or changed by the Bank, from time to time.</p> <p><strong>Internet"</strong> means a global network accessible through an Internet Service Provider, by any person or business.</p> <p><strong>Merchant"</strong> means any business that sells goods and/or services and is enabled by a certified Bank to accept Cards as a payment method.</p> <p><strong>"On Line Merchant"</strong> means a merchant who sells its goods and/or services over the Internet.</p> <p><strong>"Online Payment Service"</strong> means the Online Payment Service which enables Cardholders to purchase goods and/or services from online merchants. </p> <p><strong>"Pin"</strong> means the personal identification number, selected by the customer, which is used as a security and authentication measure.</p> <p><strong>"POS"</strong> point of sale means the physical location where a merchant initiates a payment instruction.</p>'
         },
         {
           caption: 'Issue of the Card',
-          link: '',
+          link: 'legal_issue_of_the_card',
           content: '<p>The customer must sign the card on the reverse side with ink immediately after receiving it.</p> <p>The customer is the only person who may use the card. The card cannot be transferred to any other person for use.</p> <p>The card is valid from the issuing date until notice from the Bank that the use of the Card is terminated, or the account is closed.</p>'
         },
         {
           caption: 'Responsibility for card',
-          link: '',
+          link: 'legal_responsibility_for_card',
           content: '<p>The Customer acknowledges that the authentication measures are strictly confidential and must be known only by the Customer and must not under any circumstances be disclosed.</p> <p>The Customer is responsible for the safekeeping and appropriate use of the card.</p> <p>The Customer shall take all necessary precautions to prevent the Card being lost, stolen or used by a third party and/or that any of the Authentication measures become known to any unauthorized person.</p> <p>The Customer must ensure that any record of the PIN is kept separate from the card in a safe and secure storage location.</p> <p>If the Card is lost or stolen, the Customer must notify the Bank immediately thereof, and the Bank will stop the card. Delay in notifying the Bank will be considered as negligence on the Customer`s part, and the Customer will be responsible for all cash drawn, including where the PIN is used to withdraw money and/or for payment of goods and services bought with the Card, before such time as the Bank has stopped the Card. The Customer shall be liable the Card replacement fee.</p> <p>The fraudulent, incorrect, unauthorized or illegal use of the Card or the Authentication measures by the Customer, shall not relieve the Customer of the Customer`s liabilities to the Bank in respect thereof.</p> <p>The Customer acknowledges that the use of the Card and the Authentication measures gives access to the account and the Customer information. The Customer waives any claim(s) which the Customer may have against the Bank with reference to any damages, loss or liability that the Customer may suffer as a result of such access and/or use.</p> <p>The Customer indemnifies the Bank against any damages, loss or liability which the Bank may suffer as a result of such access and/or use.</p>'
         },
         {
           caption: 'Owner of the Card',
-          link: '',
+          link: 'legal_',
           content: '<p>The card remains the property of the Bank and is subject to immediate return by the Bank.</p>'
         },
         {
           caption: 'Use of the Card',
-          link: '',
+          link: 'legal_',
           content: '<p>The Customer shall use the Card in a satisfactory manner as required from time to time by the Bank. The decision as to whether the Card is being so used rests with the Bank.</p> <p>The Bank is authorized to debit or credit the Customer`s Account with all Card transactions effected.</p> <p>The Bank will encode the card with a PIN, which will give the Customer the ability to withdraw cash and to buy goods and/or services by means of the card.</p> <p>The Customer must sign a sales voucher issued by a Merchant in respect of each Card transaction concluded with a Merchant. Failure to sign such a sales voucher does not exempt the Customer from the Customer`s liability to the Bank for any payment made by the Bank in respect of the use of the card.</p> <p>The Online payment Service will be available to those Customers whose registrations for the Online Payment Service were successful.</p> <p>The Customer must obtain access to the Internet in order to make use of the Online Payment Service. The Customer is solely responsible for the acquisition, installation and maintenance of the connection to the Internet and any related costs will be borne by the Customer. In the event that the Card is linked to more than one account, the Card transaction will be effected against the account nominated by the Customer.</p> <p>The Bank will not be liable to the Customer:</p> <ul> <li>If any Merchant/On line Merchant refuses to accept the Customer`s Card as payment or</li> <li>For any goods, purchased or services obtained with the Customer`s Card, and the Customer will not have the right to claim anything from the Bank or to institute any counterclaim against or to apply set - off against the Bank on this basis.</li> </ul> <p>No dispute between the Merchant/On Line Merchant and the Customer will give the   Customer the right to:</p> <ul> <il>be exempted from the Customer`s obligations for payment made by the Bank to the Merchant/ On Line Merchant; or</il> <il>Instruct the Bank to stop any payment to a Merchant/ On Line Merchant, or to reverse a payment which has already been made.</il> </ul> <p>The Bank shall not be party to any dispute between the Customer and any service provider appointed by the Customer to establish the Customer`s Internet infrastructure. </p> <p>The Bank will not be liable for any damages the Customer may suffer as a result of a network breakdown, systems failure, equipment, and malfunction, defect of the Customer`s computer hardware/software or internet infrastructure or resulting from events beyond the Bank`s control.</p>'
         },
         {
           caption: 'Limits',
-          link: '',
+          link: 'legal_',
           content: '<p>Although the Customer may request the Bank to increase or decrease the daily transaction limits, the Customer acknowledges that the Bank will within its discretion impose provisional limits on daily withdrawals and POS transactions at Merchants.</p> <p>The Customer must use the Card and Online Payment Service within the Limits as agreed between the Customer and the Bank, and in accordance with the terms and conditions of this Agreement. The Card does not entitle the Customer to exceed the Customer`s limits.</p> <p>In the event that a card transaction is not effected as aforesaid, authorisation of the Card Transaction may be denied by the Bank and/or the Agreement cancelled by the Bank without prejudice to its rights in terms of this Agreement or at law.</p>'
         },
         {
           caption: 'Certificates',
-          link: '',
+          link: 'legal_',
           content: '<p>A certificate signed by any of the Bank`s branch manager or administrators (whose appointment need not be proved) shall be prima facie proof of the Customer`s indebtedness to the bank.</p>'
         },
         {
           caption: 'ATM and POS Transactions',
-          link: '',
+          link: 'legal_',
           content: '<p>he ATM and POS records shall be prima facie proof of the amounts withdrawn or paid to the Customer through the use of the Card by the Customer, entitling the Bank to debit the Account, unless the Customer can prove otherwise.</p> <p>The Customer uses the ATM at the Customer`s own risk and the Bank will not be liable for any loss or theft resulting from the use of the ATM.</p> <p>In the event of improper use of the ATM or POS, or unsuccessful attempts to key in the PIN, the Card will automatically be retained. When a card is retained by the ATM, the Card will be destroyed. A replacement Card must then be requested at any Branch by the Customer. The Customer shall be liable for the Card replacement fee.</p> <p>The Bank shall not be liable for any damage or loss suffered by the Customer arising out of:</p> <ul> <li>an interruption or failure of power supply to an ATM or POS; or</li> <li>any ATM or POS failure, malfunction or of the Customer`s general use of ATM or POS services; or</li> <li>any cause whatsoever which may result in the retention of the Card or it being defaced, torn, destroyed or rendered unusable, and shall not be held liable for any consequence resulting from same</li> </ul>'
         },
         {
           caption: 'Charges',
-          link: '',
+          link: 'legal_',
           content: '<p>The Bank has the right to debit the Customer`s account with:</p> <p>Service and such other charges in respect of Card transactions as the Bank may determine, such charges will be reflected on the statement to the Customer. This includes, but is not limited to, an annual fee (which shall be debited for each year or part of a year, whether or not the Customer uses the Card) and where relevant, a card replacement fee.</p> <p>Statutory levies and taxes.</p>'
         },
         {
           caption: 'Domicilium citandi et executandi',
-          link: '',
+          link: 'legal_',
           content: '<p>The Customer`s physical address as provided by the Applicant to the Bank is the address which the Customer chooses as the address to which the Bank will send all notices, correspondence, statements and where any process of court may be served on the Customer.</p> <p>The Bank chooses as its domicilium: ny correspondence the Bank sends at the Customer`s last domicilium shall be conclusively deemed to have been received by the Customer on the seventh business day of posting.</p> <p>In the event that the Customer`s address changes, the Bank must be informed immediately in writing.</p> <p>All notices or communications must be made in writing and sent by pre-paid registered post. The Customer accepts all risk if the Customer sends any notice otherwise than by registered post.</p>'
         },
         {
           caption: 'Cancellation of Card',
-          link: '',
+          link: 'legal_',
           content: '<p>The Bank retains the right, at any time to cancel, suspend, repeal or demand the return of the Card, without the Bank losing any right to any claim which the Bank may have against the Customer.</p> <p>In the event that the Customer wants to terminate the right to use the Card, the Customer must cut through the magnetic strip of the Card and send it to the Bank, together with a written notice that the right to use the Card be terminated.</p> <p>In the event that the Customer fails to cut the Card as directed in 11.2, and it is used without the Customer`s authority, the Customer will be held liable.</p>'
         },
         {
           caption: 'Bank Statements',
-          link: '',
+          link: 'legal_',
           content: '<p>It is the Customer`s responsibility to check bank statements.</p> <p>The Customer acknowledges and agrees that in the event of the Customer`s failure to advise the Bank in writing of any error in any statement furnished by the Bank to the Customer within thirty days of date of statement, the right to raise or rely on such error by the Customer shall prescribe.</p>'
         },
         {
           caption: 'Amendments',
-          link: '',
+          link: 'legal_',
           content: '<p>The Bank may change, repeal, place or add to any terms and conditions of this Agreement. In such a case the Bank will notify the Customer in writing before they become effective.</p>'
         },
         {
           caption: 'Disclosure of Information',
-          link: '',
+          link: 'legal_',
           content: '<p>The Customer acknowledges and agrees that the Bank may inquire from any credit bureau information when assessing the Customer`s application, and may disclose the existence of the account to any credit bureau, in accordance with the code of banking practice or otherwise according to generally accepted banking practice.</p>'
         },
         {
           caption: 'Jurisdiction',
-          link: '',
+          link: 'legal_',
           content: '<p>The Customer agrees to the jurisdiction of the Magistrate`s court in respect of any matter relating to the operation of the account, notwithstanding that the amount in issue may exceed the jurisdiction of such court. The Bank shall be entitled, in its discretion, to institute any such proceedings in any division of the High Court.</p> <p>The Customer shall be liable for all legal costs, which shall include but be limited to legal costs on the so called attorney and own client scale, collection charges and tracing fees, which the Bank may incur in recovering or attempt to recover money, which the Customer owes the Bank.</p>'
         },
         {
           caption: 'General',
-          link: '',
+          link: 'legal_',
           content: '<p>In the event that the Bank allows the Customer any latitude, including any extension of time, it must not be construed as a novation or waiver the Bank`s right in regard to these terms and conditions.</p> <p>The terms and conditions, together with the application, as changed or replaced by the Bank, will form the whole of the agreement between the Customer and the Bank.</p> <p>Every provision of the terms and conditions is deemed to be separate and severable. In the event that any provision is found to be defective and unenforceable for whatever reason, the provision be severed from the remaining provisions and that the validity of the remaining provisions will continue to be of full force and effect.</p>'
         }
       ]
