--- a/_privacy.store.pug
+++ b/_privacy.store.pug
@@ -23,52 +23,52 @@
         },
         {
           caption: 'How we use your personal data',
-          link: 'privacy_',
+          link: 'privacy_how_we_use_your_personal_date',
           content: '<p>We use personal data for one or more of the following purposes:</p> <ul> <li>to verify your identity in accordance with Know Your Customer (KYC), Anti-Money Laundering (AML) and sanctions screening requirements;</li> <li>to manage and maintain your account with us;</li> <li>to prevent fraudulent or unauthorised use of our products and services;</li> <li>to better manage our business and your relationship with us;</li> <li>to improve our products and services, and to develop new products and services;</li> <li>to notify you about benefits and changes to the features of our products and services;</li> <li>to provide you with personalised advertising and marketing;</li> <li>to respond to your enquiries and to resolve disputes.</li> </ul> <p>Where necessary to protect our legal rights and interest, or the interests of others, we also use personal data in relation to legal claims, compliance, audit, risk management and regulatory functions. We may also use personal data in connection with the acquisition, merger or sale of a business.</p>'
         },
         {
           caption: 'How we share personal data',
-          link: 'privacy_',
+          link: 'privacy_how_we_share_personal_data',
           content: '<p>We share personal data with:</p> <ul> <li>any person that works for us or for one of our group companies;</li> <li>any entity that forms part of the Kasi Money group of companies, including where relevant the Kasi Money operating entity in the country or region in which you live;</li> <li>financial and other institutions we partner with to provide our products and services;</li> <li>companies and organisations that provide services to us, including in relation to technical infrastructure, marketing and analytics, and web and app development;</li> <li>companies and organisations that assist us with identity verification, background screening, due diligence and processing or otherwise fulfilling transactions that you have requested;</li> <li>our professional advisers, consultants and other similar services. We will otherwise treat your personal data as private and confidential and will not share it with other parties except:</li> <li>where you have given permission;</li> <li>where we believe it is reasonably necessary to comply with any law, regulation, legal process or governmental request, to enforce our Terms of Use or other agreements, or to protect the rights, property, or safety of us, our customers or others;</li> <li>where we may transfer rights and obligations pursuant to our agreement with you.</li> </ul>'
         },
         {
           caption: 'Security of your personal data',
-          link: 'privacy_',
+          link: 'privacy_security_of_your_personal_data',
           content: '<p>Kasi Money places great importance on ensuring the security of your personal data. We regularly review and implement up-to-date technical and organisational security measures when processing your personal data.</p> <p>Employees of Kasi Money are trained to handle personal data securely and with the utmost respect, failing which they may be subject to disciplinary action.</p>'
         },
         {
           caption: 'Global company',
-          link: 'privacy_',
+          link: 'privacy_global_company',
           content: '<p>The personal data we collect may be transferred to, stored and processed outside of the jurisdiction in which you reside, and the laws of those countries may differ from the laws applicable in your own country. For example, data collected in the South Africa (SA) may be transferred to, stored and processed at a destination(s) outside of the SA. Any processing of such data will be undertaken by our staff, or the staff of our third-party service providers, whose roles will include verifying your identity, processing payment details, and providing customer support.</p> <p>By accepting this Privacy Policy, and then submitting your personal data, you agree to the transfer, storing or processing of it outside of your jurisdiction.</p>'
         },
         {
           caption: 'Additional matters relating to personal data Retention of personal data',
-          link: 'privacy_',
+          link: 'privacy_additional_matters_relating_to_personal_data_Retention_of_personal_data',
           content: '<p>Kasi Money will retain your personal data, in compliance with this Privacy Policy and the Terms of Use, for the duration of your relationship with us, and afterwards for such period as may be necessary for our legitimate business purposes (including compliance with our legal obligations, preventing fraud, resolving disputes and enforcing agreements), to protect the interests of Kasi Money and its customers, and as required by law. </p>'
         },
         {
           caption: 'Incomplete personal data',
-          link: 'privacy_',
+          link: 'privacy_incomplete_personal_data',
           content: '<p>Where indicated (for example in application forms or account opening forms), it is obligatory to provide your personal data to us to enable us to process your application for our products or services. Should you decline to provide such personal data, we may not be able to process your application/request or provide you with our products or services.</p>'
         },
         {
           caption: 'Your right to access, update, or remove your personal data',
-          link: 'privacy_',
+          link: 'privacy_your_right_to_access_update_or_remove_your_personal_data',
           content: '<p>Most of the data Kasi Money collects, and the ways in which we use it, are necessary for us to provide and improve the services we provide to you, or to comply with our obligations. In certain situations, we give you the ability to choose how we use your data.</p> <p>Depending on the country in which you live, you may have certain rights under data protection law, including the right to object to the processing of your personal data or to request that we:</p> <ul> <li>provide you with a copy of your personal data (including in a format that can be shared with a new provider); or </li> <li>correct, delete, or restrict the processing of your personal data.</li> </ul> <p>Please submit a support ticket if you would like to exercise any of the above rights. These rights are limited in some situations, such as where we are legally required to process your data, and may limit your ability to use our products and services.</p>'
         },
         {
           caption: 'Data breaches',
-          link: 'privacy_',
+          link: 'privacy_data_breaches',
           content: '<p>We will notify you and the relevant supervisory authority as soon as we become aware of any data breach that is likely to result in a risk to your rights and freedoms.</p>'
         },
         {
           caption: 'Revisions to this Privacy Policy',
-          link: 'privacy_',
+          link: 'privacy_revisions_to_this_Privacy_Policy',
           content: '<p>We may amend this Privacy Policy from time to time. We will do our best to notify you of any amendments to the Privacy Policy and any such notice will be posted on our application or our website, or sent by email to the address associated with your Kasi Money Account.</p>'
         },
          {
           caption: 'Contacting Kasi Money in relation to personal data',
-          link: 'privacy_',
+          link: 'privacy_contacting_Kasi_Money_in_relation_to_personal_data',
           content: '<p>Should you have any query in relation to this Privacy Policy or how we handle your personal data, please contact us by an email to support@kasi.money If you are dissatisfied with the outcome of any request for information referred to us, you may approach the Information Regulator of South Africa. </p> <p>The contact details are as follows:</p> <ul> <li>The Information Regulator (South Africa)</li> <li>SALU Building, 316 Thabo Sehume Street, Pretoria</li> <li>Tel: 012 406 4818 | Fax: 086 500 3351| Email: inforeg@justice.gov.za</li> </ul>'
         }
       ]
